css/style.css
@import url('https://fonts.googleapis.com/css2?family=Newsreader:ital,opsz,wght@0,6..72,200..800;1,6..72,200..800&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: 'Newsreader', serif;
  background: rgb(29, 28, 28);
  background-image: radial-gradient(rgba(255, 255, 0, 0.03) 1px, transparent 1px);
  background-size: 30px 30px;
}

nav {
  display: flex;
  gap: 50px;
  margin: 20px;
  justify-content: center;
  padding: 70px 20px;
  text-decoration: none;
  font-size: 20px;
  font-family: 'Newsreader', serif;
  font-weight: 500 ;
}

.club {
  background: transparent;
}

.club:hover {
  transition: all 0.2s ease-in-out;
  background: linear-gradient(45deg, #ffd700, #ffb700);
  color: black;
  transform: scale(1.10);
}

nav a {
  color: #000;
  text-decoration: none;
  padding: 10px 30px;
  border-radius: 8px;
  font-size: 20px;
  font-weight: 500;
  background: linear-gradient(45deg, #ffd700, #ffb700);
}

nav a:hover {
  transform: scale(1.10);
  transition: all 0.2s ease-in-out;
  color: black;
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
}

.hero {
  position: relative;
  width: 100%;
  height: 90vh;
  overflow: hidden;
  padding-bottom: 40px;
  display: flex;
  justify-content: center;
  padding: 80px 40px;
}

.carousel {
  width: 100%;
  height: 100%;
  position: relative;
}

.slide {
  position: absolute;
  pointer-events: none;
  inset: 0;
  background-size: cover;
  background-position: center;
  opacity: 0;
  transition: opacity 1.2s ease-in-out;
  z-index: 1;
  will-change: opacity;
  width: 93%;
  height: 650px;
  margin: auto;
  border-radius: 10px;
}

.slide.active {
  opacity: 1;
  pointer-events: auto;
  border-radius: 10px;
}

.hero-content {
  position: absolute;
  z-index: 2;
  top: 50%;
  left: 8%;
  transform: translateY(-50%);
  color: #fff;
  max-width: 500px;
}

.hero-content {
  position: absolute;
  z-index: 2;
  top: 50%;
  left: 8%;
  transform: translateY(-50%);
  animation: fadeUp 1.2s ease forwards;
}

.btn {
  display: inline-block;
  margin-top: 20px;
  padding: 14px 35px;
  background: linear-gradient(45deg, #ffd700, #ffb700);
  color: #000;
  font-weight: 700;
  border-radius: 10px;
  text-decoration: none;
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.btn:hover {
  transform: scale(1.08);
  box-shadow: 0 12px 30px rgba(255, 215, 0, 0.3);
}


.slide::after {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, 0.4);
}

.hero-content {
  animation: fadeUp 1.2s ease forwards;
}

@keyframes fadeUp {
  from {
    opacity: 0;
    transform: translateY(-30%);
  }

  to {
    opacity: 1;
    transform: translateY(-50%);
  }
}

.servicos {
  padding: 80px 40px;
  color: white;
  text-align: center;
}

.servicos h1 {
  font-size: 50px;
  margin-bottom: 10px;
}

.sevicos p {
  font-weight: 600;
}

.servicos-grid {
  display: grid;
  grid-template-columns: repeat(auto-fit, minmax(280px, 0.5fr));
  gap: 30px;
  padding: 50px;
}

.ver-mais {
  display: inline-block;
  text-decoration: none;
  font-size: 20px;
  color: black;
  padding: 10px 30px;
  background: linear-gradient(45deg, #ffd700, #ffb700);
  border-radius: 10px;
  margin-top: 8px;
  transition: transform 0.2s ease-in-out;
  font-weight: 500;
}

.ver-mais:hover {
  transform: scale(1.10);
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.4);
  color: black;
}

.servico-card {
  position: relative;
  height: 260px;
  border-radius: 18px;
  padding: 24px;
  background-size: cover;
  background-position: center;
  border: 2px solid rgba(255, 230, 0, 0.908);
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  text-align: left;
  overflow: hidden;
}

.card-bg {
  position: absolute;
  inset: 0;
  background-size: cover;
  background-position: center;
  transition: transform 0.6s ease;
  z-index: 0;
  font-weight: 500;
}

.servico-card::before {
  content: "";
  position: absolute;
  inset: 0;
  background: rgba(0, 0, 0, 0.45);
  z-index: 1;
  transition: background 0.4s ease;
  font-weight: 500;
}

.servico-card::after {
  content: "";
  position: absolute;
  inset: 0;
  background: linear-gradient(rgba(255, 204, 0, 0.35),
      rgba(255, 180, 0, 0.45));
  opacity: 0;
  transition: opacity 0.4s ease;
  z-index: 2;
  font-weight: 500;
}


.servico-card h3,
.servico-card p {
  position: relative;
  z-index: 3;
}

.servico-card h3 {
  font-size: 28px;
  margin-bottom: 10px;
}

.servico-card p {
  font-size: 15px;
  line-height: 1.4;
  opacity: 0.9;
}

.servico-card.destaque {
  background: yellow;
}

.servico-card.destaque::before {
  background: rgba(0, 0, 0, 0.2);
}

.servico-card {
  transition: transform 0.3s ease, box-shadow 0.3s ease;
}

.servico-card:hover .card-bg {
  transform: scale(1.03);
  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4);
}

.servico-card:hover::after {
  opacity: 1;
  box-shadow: 0 15px 40px rgba(0, 0, 0, 0.4);
}

.assinatura {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 40px;
  padding: 50px 20px;
  margin-left: 80px;
}

.assImage {
  display: flex;
  justify-content: center;
  align-items: center;
}

.assImage img {
  width: 85%;
  height: auto;
  object-fit: cover;
  border-radius: 12px;
}

.assImage img:hover {
  transform: scale(1.02);
  transition: transform 0.3s ease;
  box-shadow: 0 20px 60px rgba(0, 0, 0, 0.5);
}

.assText {
  display: flex;
  flex-direction: column;
  justify-content: center;
  color: white;
  max-width: 500px;
  gap: 25px;
  background: #252424;
  padding: 50px;
  border-radius: 18px;
}

.assText h1 {
  font-size: 48px;
  margin-bottom: 20px;
  line-height: 1.1;
}

.assText p {
  font-size: 20px;
  line-height: 1.6;
  color: yellow;
}

.assText a {
  position: relative;
  overflow: hidden;
  display: inline-block;
  margin-top: 30px;
  padding: 14px 40px;
  background: linear-gradient(45deg, #ffd700, #ffb700); 
  color: black;
  font-weight: 700;
  border-radius: 10px;
  text-decoration: none;
  font-size: 20px;
  text-align: center;
  transition: background 0.4s ease, color 0.4s ease;
}

.assText a::before {
  content: "";
  position: absolute;
  top: 0;
  left: -120%;
  width: 40%;
  height: 100%;
  background: black;
  transform: skewX(-20deg);
  transition: left 0.6s ease, background 0.4s ease;
  z-index: 1;
}

.assText a:hover {
  background: black;
  color: white;
}

.assText a:hover::before {
  left: 130%;
  background: #ffd700;
}

.localizacao {
  padding: 80px 40px;
  color: white;
  text-align: center;
}

.localizacao h1 {
  font-size: 50px;
  margin-bottom: 10px;
}

.mapa-container {
  margin-top: 40px;
  width: 100%;
  max-width: 900px;
  height: 400px;
  margin-left: auto;
  margin-right: auto;
  border-radius: 20px;
  overflow: hidden;
  border: 2px solid rgba(255, 230, 0, 0.908);
}

.mapa-container:hover {
  transform: scale(1.01);
  transition: transform 0.3s ease;
  box-shadow: 0 25px 70px rgba(0, 0, 0, 0.6);
}

.redes {
  padding: 80px 40px;
  text-align: center;
}

.rede-container {
  display: flex;
  justify-content: center;
  gap: 40px;
  flex-wrap: wrap;
}

.redes h3 {
  font-size: 34px;
  margin-bottom: 20px;
}

.rede-container a {
  display: flex;
  align-items: center;
  gap: 10px;
  padding: 12px 22px;
  background: transparent;
  color: #ffd700;
  text-decoration: none;
  font-weight: 600;
  border-radius: 12px;
  transition: 0.3s ease;
  font-weight: 600;
}

.rede-container a svg {
  width: 20px;
  height: 20px;
}

.rede-container a:hover {
  background: black;
  color: #ffd700;
  transform: translateY(-4px);
  box-shadow: 0 15px 30px rgba(0,0,0,0.4);
}

footer {
  background: #000;
  padding: 50px 20px;
  text-align: center;
}

.footer-content h3 {
  color: #ffd700;
  font-size: 24px;
  margin-bottom: 10px;
}

.footer-content p {
  color: #777;
  font-size: 14px;
  margin-bottom: 5px;
}

.copy {
  margin-top: 20px;
  font-size: 13px;
  color: #555;
}

